@@ -172,20 +172,17 @@ cqfd. This is what the -f option is for:
 ## Build Container Environment ##
 
 When cqfd runs, a docker container is launched as the environment in
-which to run the *command*.  Within this environment, commands are
-run as the 'builder' user.  So that this user has access to local
-files, the current working directory is mapped to ~builder/src/.
+which to run the *command*.  Within this environment, commands are run
+as the same user as the one invoking cqfd (with a fallback to the
+'builder' user in case it cannot be determined). So that this user has
+access to local files, the current working directory is mapped to
+the same location inside the container.
 
 ### SSH Handling ###
 
-The local ~/.ssh directory is mapped to the corresponding directory in
-the build container i.e. ~builder/.ssh.  This effectively enables SSH agent
+The local ~/.ssh directory is also mapped to the corresponding
+directory in the build container. This effectively enables SSH agent
 forwarding so a build can, for example, pull authenticated git repos.
-
-Note that it may be helpful to specify the local user name in the
-.ssh/config file as this isn't the default on the builder e.g.
-
-	$ echo "User $USER" >> ~/.ssh/config
 
 ## Requirements ##
 
